--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -4,36 +4,34 @@ body {
 }
 
 .card {
-  font-size: 16px;
   width: 400px;
   background: #fff;
-  margin: 8px auto;
-  padding: 8px;
+  margin: 16px auto;
 }
 
 .title {
-
   background: #e3f4ff;
+  font-size: 24px;
   padding: 8px;
-  margin: 8px;
+  margin-bottom: 8px;
 }
 
 .content {
   background: #e3f4ff;
-  padding: 8px;
-  margin: 16px 8px;
+  margin-bottom: 8px;
+  padding: 16px 8px;
 }
 
 .button-container {
   background: #e3f4ff;
   padding: 8px;
-  margin: 8px;
   text-align: center;
 }
 
 button {
-  display: inline-block;
+  display: block;
   background: white;
   border: 1px solid #eee;
-  margin: 8px 24px;
+  margin: 0 auto;
+  padding: 8px 24px;
 }
